--- a/web/package.json
+++ b/web/package.json
@@ -38,6 +38,7 @@
     "vue-fullscreen": "^2.1.6",
     "vue-good-table": "^2.18.0",
     "vue-js-modal": "^1.3.31",
+    "vue-json-editor": "^1.4.3",
     "vue-lazyload": "^1.3.3",
     "vue-quill-editor": "^3.0.6",
     "vue-slider-component": "^3.0.40",
